# sandbox

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/application/: CMakeLists.txt
src/application/application/: CMakeLists.txt  main.cpp
src/data/: CMakeLists.txt
src/domain/: CMakeLists.txt
src/presentation/: CMakeLists.txt
src/tests/: CMakeLists.txt  CMakeLists.txt.in
src/tests/tests/: CMakeLists.txt  test_foo.cpp
src/views/: CMakeLists.txt
src/views/views/: CMakeLists.txt
